# image-color-theme-detector

./: Dockerfile  README.md  colors.txt  main.py  pyproject.toml  schemas.py
static/css/: style.css
static/js/: script.js
templates/: index.html
