[tool.poetry]
name = "image-color-theme-detector"
version = "0.1.0"
description = "This FastAPI application extracts the main colors from uploaded images using the KMeans clustering algorithm."
authors = ["Dmytro Shyrokov <shyrokov.dmytro@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pillow = "^10.3.0"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
